--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "主页",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node index.js",
     "bookIns": "gitbook install",
     "bookBuild": "gitbook build && xcopy/Y _book /e",
     "bookStart": "gitbook serve"
