--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "testHtml": "node test/index.html",
-    "testJs": "node test/index.js",
+    "testJs": "node test/test/index.js",
     "bookIns": "gitbook install",
     "bookBuild": "gitbook build && xcopy/Y _book /e",
     "bookStart": "gitbook serve"
